--- a/.cargo/config
+++ b/.cargo/config
@@ -1,2 +1,6 @@
 [target.x86_64-unknown-linux-gnu]
 runner = 'sudo -E'
+[target.aarch64-apple-darwin]
+runner = 'sudo -E'
+[target.aarch64-unknown-linux-gnu]
+runner = 'sudo -E'
